--- a/index.html
+++ b/index.html
@@ -209,6 +209,7 @@
     var typed = new Typed('#element', {
         strings: ['Getting Started With...'],
         typeSpeed: 50,
+        loop : true
     });
 
 
