--- a/enter.html
+++ b/enter.html
@@ -28,7 +28,7 @@ body{
             </div>
             <div class="input-group">
                 <div class="input-field">
-                    <input type="text" class="input-box" id="logEmail" required>
+                    <input type="email" class="input-box" id="logEmail" required>
                     <label for="logEmail">Email address</label>
                 </div>
                 <div class="input-field">
@@ -104,6 +104,7 @@ body{
 
     </div>
  </div>
+
 <script>
 
      var x = document.getElementById('login');
